docs: add javadoc comments